--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -5,11 +5,17 @@
 body {
   padding-bottom: 70px;
   color: var(--global-text-color);
-  background-color: var(--global-bg-color);
 
   h1, h2, h3, h4, h5, h6 {
     scroll-margin-top: 66px;
   }
+
+  // background things
+  background-color: var(--global-bg-color);
+  background-image:  url('convolution.png');
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
 }
 
 body.fixed-top-nav {
@@ -33,18 +39,9 @@ body.sticky-bottom-footer {
   }
 }
 
-// TODO: redefine content layout.
-
-
-/******************************************************************************
- * Publications
- ******************************************************************************/
-
-// TODO: redefine publications layout.
-
-
-/*****************************************************************************
-* Projects
-*****************************************************************************/
-
-// TODO: redefine projects layout.
+/* background image */
+.hero {
+  .feature-img {
+    max-width: 100%;
+  }
+}
